preview.log

> @diagram-generator/preview-app@0.1.0 dev
> tsx watch src/server.ts

node:events:497
      throw er; // Unhandled 'error' event
      ^

Error: listen EADDRINUSE: address already in use 127.0.0.1:8100
    at Server.setupListenHandle [as _listen2] (node:net:1940:16)
    at listenInCluster (node:net:1997:12)
    at node:net:2206:7
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21)
Emitted 'error' event on Server instance at:
    at emitErrorNT (node:net:1976:8)
    at process.processTicksAndRejections (node:internal/process/task_queues:90:21) {
  code: 'EADDRINUSE',
  errno: -4091,
  syscall: 'listen',
  address: '127.0.0.1',
  port: 8100
}

Node.js v22.21.1
17:20:33 [tsx] unlink in ./src\preview-engine-switcher.ts Rerunning...

node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [ERR_MODULE_NOT_FOUND]: Cannot find module 'H:\WSL_dev_projects\diagram-generator\apps\preview\src\preview-engine-switcher.js' imported from H:\WSL_dev_projects\diagram-generator\apps\preview\src\server.ts
    at finalizeResolution (node:internal/modules/esm/resolve:274:11)
    at moduleResolve (node:internal/modules/esm/resolve:859:10)
    at defaultResolve (node:internal/modules/esm/resolve:983:11)
    at nextResolve (node:internal/modules/esm/hooks:748:28)
    at resolveBase (file:///H:/WSL_dev_projects/diagram-generator/apps/preview/node_modules/tsx/dist/register-CqMfTiWi.mjs:2:8141)
    at async resolveDirectory (file:///H:/WSL_dev_projects/diagram-generator/apps/preview/node_modules/tsx/dist/register-CqMfTiWi.mjs:2:9221)
    at async resolve2 (file:///H:/WSL_dev_projects/diagram-generator/apps/preview/node_modules/tsx/dist/register-CqMfTiWi.mjs:2:11932)
    at async nextResolve (node:internal/modules/esm/hooks:748:22)
    at async Hooks.resolve (node:internal/modules/esm/hooks:240:24)
    at async handleMessage (node:internal/modules/esm/worker:199:18) {
  code: 'ERR_MODULE_NOT_FOUND',
  url: 'file:///H:/WSL_dev_projects/diagram-generator/apps/preview/src/preview-engine-switcher.js'
}

Node.js v22.21.1
c17:20:50 [tsx] unlink in ./src\server.ts Rerunning...
c[preview-app] listening on http://127.0.0.1:8100
17:20:56 [tsx] unlink in ./..\..\packages\layout-engine\src\preview-engine\registry.ts Restarting...
c[preview-app] listening on http://127.0.0.1:8100
17:21:05 [tsx] change in ./..\..\packages\layout-engine\dist\index.js Restarting...
c[preview-app] listening on http://127.0.0.1:8100
17:49:06 [tsx] change in ./src\server.ts Restarting...
c[preview-app] listening on http://127.0.0.1:8100
17:49:25 [tsx] change in ./src\server.ts Restarting...
c[preview-app] listening on http://127.0.0.1:8100
17:49:33 [tsx] change in ./src\server.ts Restarting...

node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [TransformError]: Transform failed with 1 error:
H:\WSL_dev_projects\diagram-generator\apps\preview\src\server.ts:889:8: ERROR: Unexpected "catch"
    at failureErrorWithLog (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:1748:15)
    at H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:1017:50
    at responseCallbacks.<computed> (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:884:9)
    at handleIncomingPacket (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:939:12)
    at Socket.readFromStdout (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:862:7)
    at Socket.emit (node:events:519:28)
    at addChunk (node:internal/streams/readable:561:12)
    at readableAddChunkPushByteMode (node:internal/streams/readable:512:3)
    at Readable.push (node:internal/streams/readable:392:5)
    at Pipe.onStreamRead (node:internal/stream_base_commons:189:23)

Node.js v22.21.1
c17:49:46 [tsx] change in ./src\server.ts Rerunning...

node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [TransformError]: Transform failed with 1 error:
H:\WSL_dev_projects\diagram-generator\apps\preview\src\server.ts:1188:0: ERROR: Unexpected "}"
    at failureErrorWithLog (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:1748:15)
    at H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:1017:50
    at responseCallbacks.<computed> (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:884:9)
    at handleIncomingPacket (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:939:12)
    at Socket.readFromStdout (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:862:7)
    at Socket.emit (node:events:519:28)
    at addChunk (node:internal/streams/readable:561:12)
    at readableAddChunkPushByteMode (node:internal/streams/readable:512:3)
    at Readable.push (node:internal/streams/readable:392:5)
    at Pipe.onStreamRead (node:internal/stream_base_commons:189:23)

Node.js v22.21.1
c17:49:53 [tsx] change in ./..\..\packages\layout-engine\dist\index.js Rerunning...

node:internal/modules/run_main:123
    triggerUncaughtException(
    ^
Error [TransformError]: Transform failed with 1 error:
H:\WSL_dev_projects\diagram-generator\apps\preview\src\server.ts:1188:0: ERROR: Unexpected "}"
    at failureErrorWithLog (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:1748:15)
    at H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:1017:50
    at responseCallbacks.<computed> (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:884:9)
    at handleIncomingPacket (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:939:12)
    at Socket.readFromStdout (H:\WSL_dev_projects\diagram-generator\apps\preview\node_modules\esbuild\lib\main.js:862:7)
    at Socket.emit (node:events:519:28)
    at addChunk (node:internal/streams/readable:561:12)
    at readableAddChunkPushByteMode (node:internal/streams/readable:512:3)
    at Readable.push (node:internal/streams/readable:392:5)
    at Pipe.onStreamRead (node:internal/stream_base_commons:189:23)

Node.js v22.21.1
c17:50:02 [tsx] change in ./src\server.ts Rerunning...
H:\WSL_dev_projects\diagram-generator\apps\preview\src\server.ts:20
  evaluatePreviewEngineCompatibility,
  ^
SyntaxError: The requested module '@diagram-generator/layout-engine' does not provide an export named 'evaluatePreviewEngineCompatibility'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.21.1
c17:50:07 [tsx] change in ./..\..\packages\layout-engine\dist\index.js Rerunning...
H:\WSL_dev_projects\diagram-generator\apps\preview\src\server.ts:20
  evaluatePreviewEngineCompatibility,
  ^
SyntaxError: The requested module '@diagram-generator/layout-engine' does not provide an export named 'evaluatePreviewEngineCompatibility'
    at ModuleJob._instantiate (node:internal/modules/esm/module_job:226:21)
    at async ModuleJob.run (node:internal/modules/esm/module_job:335:5)
    at async onImport.tracePromise.__proto__ (node:internal/modules/esm/loader:665:26)
    at async asyncRunEntryPointWithESMLoader (node:internal/modules/run_main:117:5)

Node.js v22.21.1
c17:50:23 [tsx] change in ./..\..\packages\layout-engine\src\index.ts Rerunning...
c[preview-app] listening on http://127.0.0.1:8100
17:50:28 [tsx] change in ./..\..\packages\layout-engine\dist\index.js Restarting...
c[preview-app] listening on http://127.0.0.1:8100
